# bare-heif

./: CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
cmake/: aom.cmake  libde265.cmake  libheif.cmake
cmake/ports/libde265/: port.cmake
cmake/ports/libheif/: port.cmake
test/fixtures/: grapefruit-odd-height.heic  grapefruit-odd-width.heic  grapefruit.avif  grapefruit.heic
